feat(plugin): update to Koishi v4 API and refactor config
Transitioned message processing from `segment` to `h` elements for
Koishi v4 compatibility. Overhauled configuration schema for `noises`
and `trailing` options, providing more granular control and clarity.
Removed `legacyMode` and `endsWithCQCode` logic, streamlining core
functionality. Introduced a logger for improved debugging.
Updated package metadata to reflect the project fork and new name.

BREAKING CHANGE: Configuration schema for `noises` and `trailing` has
been completely restructured. Existing configurations must be updated
to the new object array format (e.g., `是否启用`, `语气词`, `替换目标`,
`替换结果`). The `legacyMode` option has been removed.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "koishi-plugin-nyan",
+  "name": "koishi-plugin-nyan-fork",
   "version": "1.2.4",
   "description": "一键变猫",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
-    "dist"
+    "src"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArilyChan/arilychan/plugins/nyan"
+    "url": "git+https://github.com/dzt2008/koishi-plugin-nyan-fork.git"
   },
   "keywords": [
     "koishi",
